upstart (0.6.3-11-chromeos1) karmic; urgency=low

  * Forking for Chrome OS.  Adding support for performance logging.

 -- The Chromium OS Authors <chromium-os-dev@googlegroups.com>  Mon, 04 Jan 2010 17:54:11 -0800

upstart (0.6.3-11) karmic-proposed; urgency=low

  * Make rc-sysinit.conf wait on the loopback interface, to ensure that the
    interface is up before we process the scripts in /etc/rc?.d.  LP: #461725.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Tue, 08 Dec 2009 12:58:37 -0800

upstart (0.6.3-10) karmic; urgency=low

  * Retain the "telinit u" for the case when we're upgrading from pre-0.6
    (ie. hardy or jaunty).  Whups.  LP: #451556.

 -- Scott James Remnant <scott@ubuntu.com>  Thu, 15 Oct 2009 17:48:47 +0100

upstart (0.6.3-9) karmic; urgency=low

  * Restore the call to sync() in reboot, have been observing some issues
    and it looks like ext4 might not be explicitly flushing the disk when
    remounting read-only.

 -- Scott James Remnant <scott@ubuntu.com>  Wed, 14 Oct 2009 16:40:32 +0100

upstart (0.6.3-8) karmic; urgency=low

  * Rather than calling "telinit u" after upgrade, which will lose state,
    have the umountroot initscript take care of it for us by setting a
    flag.  LP: #441796.
  * Don't lose the original default runlevel if /etc/inittab exists without
    an initdefault line.  LP: #405847.
  * Fix "unhandled error" in shutdown when unable to change runlevel,
    e.g. due to previous Ubiquity bug.  LP: #426332.
  * Merge change from trunk that makes it possible to build Upstart using
    a previously built copy of nih-dbus-tool, especially useful when
    cross-compiling.  LP: #426740.
  * Merge change from libnih to store our assertion messages in the
    glibc __abort_msg symbol so apport can pick them up.  LP: #429411.
  * Merge change from libnih to fix compilation issue with eglibc due
    to changed alphasort() prototype.

 -- Scott James Remnant <scott@ubuntu.com>  Wed, 14 Oct 2009 05:34:13 +0100
