@@ -69,7 +69,7 @@ com_ubuntu_Upstart_OUTPUTS = \
 com_ubuntu_Upstart_XML = \
 	../dbus/com.ubuntu.Upstart.xml
 
-$(com_ubuntu_Upstart_OUTPUTS): $(com_ubuntu_Upstart_XML) $(top_builddir)/nih-dbus-tool/nih-dbus-tool
+$(com_ubuntu_Upstart_OUTPUTS): $(com_ubuntu_Upstart_XML) $(top_builddir)/nih-dbus-tool/nih-dbus-tool-build
 	$(NIH_DBUS_TOOL) \
 		--mode=object --prefix=control --default-interface=com.ubuntu.Upstart0_6 \
 		--output=$@ $<
@@ -82,7 +82,7 @@ com_ubuntu_Upstart_Job_OUTPUTS = \
 com_ubuntu_Upstart_Job_XML = \
 	../dbus/com.ubuntu.Upstart.Job.xml
 
-$(com_ubuntu_Upstart_Job_OUTPUTS): $(com_ubuntu_Upstart_Job_XML) $(top_builddir)/nih-dbus-tool/nih-dbus-tool
+$(com_ubuntu_Upstart_Job_OUTPUTS): $(com_ubuntu_Upstart_Job_XML) $(top_builddir)/nih-dbus-tool/nih-dbus-tool-build
 	$(NIH_DBUS_TOOL) \
 		--mode=object --prefix=job_class --default-interface=com.ubuntu.Upstart0_6.Job \
 		--output=$@ $<
@@ -95,7 +95,7 @@ com_ubuntu_Upstart_Instance_OUTPUTS = \
 com_ubuntu_Upstart_Instance_XML = \
 	../dbus/com.ubuntu.Upstart.Instance.xml
 
-$(com_ubuntu_Upstart_Instance_OUTPUTS): $(com_ubuntu_Upstart_Instance_XML) $(top_builddir)/nih-dbus-tool/nih-dbus-tool
+$(com_ubuntu_Upstart_Instance_OUTPUTS): $(com_ubuntu_Upstart_Instance_XML) $(top_builddir)/nih-dbus-tool/nih-dbus-tool-build
 	$(NIH_DBUS_TOOL) \
 		--mode=object --prefix=job --default-interface=com.ubuntu.Upstart0_6.Instance \
 		--output=$@ $<
